--- a/app/src/main/res/layout/include_top.xml
+++ b/app/src/main/res/layout/include_top.xml
@@ -28,18 +28,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:layout_weight="1"
-                android:hint="@string/include_option_1"
+                android:hint="@string/include_length"
                 android:theme="@style/myEditTextOutlineColor"
                 app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
+                app:shapeAppearance="@style/myEditTextCorner"
+                app:suffixText="cm"
+                app:suffixTextAppearance="@style/myTextSize10sdp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option1"
+                    android:id="@+id/etLength"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_34sdp"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION1]}'
+                    android:inputType="numberDecimal"
+                    android:text='@={size.sizeMap[constant.LENGTH]}'
                     android:textSize="@dimen/_10sdp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,66 +50,20 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/include_option_2"
+                android:hint="@string/include_shoulder"
                 android:theme="@style/myEditTextOutlineColor"
                 app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
+                app:shapeAppearance="@style/myEditTextCorner"
+                app:suffixText="cm"
+                app:suffixTextAppearance="@style/myTextSize10sdp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option2"
+                    android:id="@+id/etShoulder"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_34sdp"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION2]}'
-                    android:textSize="@dimen/_10sdp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_4sdp"
-                android:layout_weight="1"
-                android:hint="@string/include_option_3"
-                android:theme="@style/myEditTextOutlineColor"
-                app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option3"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_34sdp"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION3]}'
-                    android:textSize="@dimen/_10sdp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="@string/include_option_4"
-                android:theme="@style/myEditTextOutlineColor"
-                app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option4"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_34sdp"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION4]}'
+                    android:inputType="numberDecimal"
+                    android:text='@={size.sizeMap[constant.SHOULDER]}'
                     android:textSize="@dimen/_10sdp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,18 +79,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:layout_weight="1"
-                android:hint="@string/include_option_5"
+                android:hint="@string/include_chest"
                 android:theme="@style/myEditTextOutlineColor"
                 app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
+                app:shapeAppearance="@style/myEditTextCorner"
+                app:suffixText="cm"
+                app:suffixTextAppearance="@style/myTextSize10sdp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option5"
+                    android:id="@+id/etChest"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_34sdp"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION5]}'
+                    android:inputType="numberDecimal"
+                    android:text='@={size.sizeMap[constant.CHEST]}'
                     android:textSize="@dimen/_10sdp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,23 +101,24 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/include_option_6"
+                android:hint="@string/include_sleeve"
                 android:theme="@style/myEditTextOutlineColor"
                 app:hintTextAppearance="@style/myTextSize8sdp"
-                app:shapeAppearance="@style/myEditTextCorner">
+                app:shapeAppearance="@style/myEditTextCorner"
+                app:suffixText="cm"
+                app:suffixTextAppearance="@style/myTextSize10sdp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_include_etc_option6"
+                    android:id="@+id/etSleeve"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_34sdp"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:text='@={size.sizeMap[constant.OPTION6]}'
+                    android:inputType="numberDecimal"
+                    android:text='@={size.sizeMap[constant.SLEEVE]}'
                     android:textSize="@dimen/_10sdp" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </layout>
