--- a/app/src/main/res/layout/item_size_list.xml
+++ b/app/src/main/res/layout/item_size_list.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/cb_item_size_list"
+            android:id="@+id/cb"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
@@ -28,7 +28,7 @@
             android:scaleY="0.7" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card_view_item_size_list"
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_12sdp"
@@ -46,7 +46,7 @@
                     android:layout_height="@dimen/_40sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/iv_item_size_list_picture"
+                        android:id="@+id/iv"
                         setUri="@{size.imageUri}"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
@@ -58,7 +58,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/icon_item_size_list_add_image"
                         setAddIcon="@{size.imageUri}"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
@@ -74,6 +73,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/layoutTv"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -82,7 +82,6 @@
                     android:paddingHorizontal="@dimen/_6sdp">
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_item_size_list_brand"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_2sdp"
@@ -94,7 +93,6 @@
                         tools:text="Anderson Bell" />
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_item_size_list_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:alpha="0.8"
@@ -106,7 +104,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/cb_item_size_list_favorite"
+                    android:id="@+id/cbFavorite"
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="match_parent"
                     android:layout_gravity="bottom"
@@ -118,7 +116,7 @@
                     android:scaleY="0.7" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/icon_item_size_list_drag_handle"
+                    android:id="@+id/iconDragHandle"
                     setDragHandle="@{size.size}"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
