--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -14,12 +14,12 @@
             android:layout_height="@dimen/_40sdp">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/tool_bar_recycle_bin"
+                android:id="@+id/toolBar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_recycle_bin_title"
+                    android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/all_recycler_bin_cap"
@@ -28,7 +28,7 @@
                     app:fontFamily="@font/noto_bold" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/ac_tv_recycle_bin_search_layout"
+                    android:id="@+id/acTvLayout"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -40,7 +40,7 @@
                     app:startIconDrawable="@drawable/icon_search">
 
                     <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/ac_tv_recycle_bin_search"
+                        android:id="@+id/acTv"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_36sdp"
                         android:background="@android:color/transparent"
@@ -55,7 +55,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/host_fragment_recycle_bin"
+            android:id="@+id/hostFragmentRecycleBin"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
