--- a/app/src/main/res/layout/fragment_recycle_bin_main.xml
+++ b/app/src/main/res/layout/fragment_recycle_bin_main.xml
@@ -10,20 +10,20 @@
         tools:context=".recyclebin.main.RecycleBinMainFragment">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_recycle_bin_category"
+            android:id="@+id/tvCategory"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center"
             android:text="@string/all_category_cap"
             android:textSize="@dimen/_14sdp"
             app:fontFamily="@font/noto_black"
-            app:layout_constraintBottom_toTopOf="@id/divider_recycle_bin_category"
+            app:layout_constraintBottom_toTopOf="@id/dividerCategory"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_recycle_bin_folder"
+            android:id="@+id/tvFolder"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -31,13 +31,13 @@
             android:text="@string/all_folder_cap"
             android:textSize="@dimen/_14sdp"
             app:fontFamily="@font/noto_black"
-            app:layout_constraintBottom_toTopOf="@id/divider_recycle_bin_folder"
+            app:layout_constraintBottom_toTopOf="@id/dividerFolder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_recycle_bin_category" />
+            app:layout_constraintTop_toBottomOf="@id/dividerCategory" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_recycle_bin_size"
+            android:id="@+id/tvSize"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -45,13 +45,13 @@
             android:text="@string/all_size_cap"
             android:textSize="@dimen/_14sdp"
             app:fontFamily="@font/noto_black"
-            app:layout_constraintBottom_toTopOf="@id/divider_recycle_bin_size"
+            app:layout_constraintBottom_toTopOf="@id/dividerSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_recycle_bin_folder" />
+            app:layout_constraintTop_toBottomOf="@id/dividerFolder" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_recycle_bin_daily_look"
+            android:id="@+id/tvDailyLook"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -59,13 +59,13 @@
             android:text="@string/all_daily_look_cap"
             android:textSize="@dimen/_14sdp"
             app:fontFamily="@font/noto_black"
-            app:layout_constraintBottom_toTopOf="@id/divider_recycle_bin_daily_look"
+            app:layout_constraintBottom_toTopOf="@id/dividerDailyLook"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_recycle_bin_size" />
+            app:layout_constraintTop_toBottomOf="@id/dividerSize" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_recycle_bin_wish_list"
+            android:id="@+id/tvWishList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -76,90 +76,90 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_recycle_bin_daily_look" />
+            app:layout_constraintTop_toBottomOf="@id/dividerDailyLook" />
 
         <View
-            android:id="@+id/divider_recycle_bin_category"
+            android:id="@+id/dividerCategory"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="?myColorControl"
-            app:layout_constraintBottom_toTopOf="@id/tv_recycle_bin_folder"
-            app:layout_constraintTop_toBottomOf="@id/tv_recycle_bin_category" />
+            app:layout_constraintBottom_toTopOf="@id/tvFolder"
+            app:layout_constraintTop_toBottomOf="@id/tvCategory" />
 
         <View
-            android:id="@+id/divider_recycle_bin_folder"
+            android:id="@+id/dividerFolder"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="?myColorControl"
-            app:layout_constraintBottom_toTopOf="@id/tv_recycle_bin_size"
-            app:layout_constraintTop_toBottomOf="@id/tv_recycle_bin_folder" />
+            app:layout_constraintBottom_toTopOf="@id/tvSize"
+            app:layout_constraintTop_toBottomOf="@id/tvFolder" />
 
         <View
-            android:id="@+id/divider_recycle_bin_size"
+            android:id="@+id/dividerSize"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="?myColorControl"
-            app:layout_constraintBottom_toTopOf="@id/tv_recycle_bin_daily_look"
-            app:layout_constraintTop_toBottomOf="@id/tv_recycle_bin_size" />
+            app:layout_constraintBottom_toTopOf="@id/tvDailyLook"
+            app:layout_constraintTop_toBottomOf="@id/tvSize" />
 
         <View
-            android:id="@+id/divider_recycle_bin_daily_look"
+            android:id="@+id/dividerDailyLook"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="?myColorControl"
-            app:layout_constraintBottom_toTopOf="@id/tv_recycle_bin_wish_list"
-            app:layout_constraintTop_toBottomOf="@id/tv_recycle_bin_daily_look" />
+            app:layout_constraintBottom_toTopOf="@id/tvWishList"
+            app:layout_constraintTop_toBottomOf="@id/tvDailyLook" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icon_recycle_bin_category"
+            android:id="@+id/iconArrowCategory"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:scaleX="1.1"
             android:scaleY="1.1"
-            app:layout_constraintBottom_toTopOf="@id/icon_recycle_bin_folder"
+            app:layout_constraintBottom_toTopOf="@id/iconArrowFolder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icon_arrow_forward" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icon_recycle_bin_folder"
+            android:id="@+id/iconArrowFolder"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:scaleX="1.1"
             android:scaleY="1.1"
-            app:layout_constraintBottom_toTopOf="@id/icon_recycle_bin_size"
+            app:layout_constraintBottom_toTopOf="@id/iconArrowSize"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_recycle_bin_category"
+            app:layout_constraintTop_toBottomOf="@id/iconArrowCategory"
             app:srcCompat="@drawable/icon_arrow_forward" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icon_recycle_bin_size"
+            android:id="@+id/iconArrowSize"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:scaleX="1.1"
             android:scaleY="1.1"
-            app:layout_constraintBottom_toTopOf="@id/icon_recycle_bin_daily_look"
+            app:layout_constraintBottom_toTopOf="@id/iconArrowDailyLook"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_recycle_bin_folder"
+            app:layout_constraintTop_toBottomOf="@id/iconArrowFolder"
             app:srcCompat="@drawable/icon_arrow_forward" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icon_recycle_bin_daily_look"
+            android:id="@+id/iconArrowDailyLook"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:scaleX="1.1"
             android:scaleY="1.1"
-            app:layout_constraintBottom_toTopOf="@id/icon_recycle_bin_wish_list"
+            app:layout_constraintBottom_toTopOf="@id/iconArrowWishList"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_recycle_bin_size"
+            app:layout_constraintTop_toBottomOf="@id/iconArrowSize"
             app:srcCompat="@drawable/icon_arrow_forward" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icon_recycle_bin_wish_list"
+            android:id="@+id/iconArrowWishList"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_16sdp"
@@ -167,7 +167,7 @@
             android:scaleY="1.1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_recycle_bin_daily_look"
+            app:layout_constraintTop_toBottomOf="@id/iconArrowDailyLook"
             app:srcCompat="@drawable/icon_arrow_forward" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
