--- a/app/src/main/res/layout/fragment_recycle_bin_search.xml
+++ b/app/src/main/res/layout/fragment_recycle_bin_search.xml
@@ -5,8 +5,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".search.main.SearchFragment">
+        android:layout_height="match_parent">
 
         <com.example.project_myfit.util.LockableScrollView
             android:id="@+id/sv"
@@ -14,33 +13,36 @@
             android:layout_height="match_parent"
             android:fillViewport="true">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                tools:context=".recyclebin.search.RecycleBinSearchFragment">
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_32sdp"
+                    android:layout_height="0dp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:background="@android:color/transparent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:tabIndicatorColor="?myColorControl"
+                    app:tabMode="auto"
                     app:tabSelectedTextColor="?myColorControl"
-                    app:tabTextAppearance="@style/myTextSize9sdp" />
+                    app:tabTextAppearance="@style/myTextSize10sdp" />
 
                 <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vp"
-                    tools:layout="@layout/fragment_search"
+                    android:id="@+id/vp_recycle_bin_search"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </com.example.project_myfit.util.LockableScrollView>
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/svRecentSearch"
-            android:background="?colorPrimary"
             android:layout_width="match_parent"
+            android:background="?colorPrimary"
             android:layout_height="match_parent"
             android:fillViewport="true">
 
@@ -95,8 +97,8 @@
                     android:id="@+id/layoutNoResult"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone"
-                    android:background="?colorPrimary">
+                    android:background="?colorPrimary"
+                    android:visibility="gone">
 
                     <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
@@ -108,6 +110,7 @@
                 </FrameLayout>
 
             </FrameLayout>
+
         </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
