--- a/app/src/main/res/layout/fragment_size.xml
+++ b/app/src/main/res/layout/fragment_size.xml
@@ -15,7 +15,6 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/sv_size"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:colorBackground"
@@ -47,12 +46,12 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/iv_size_picture"
+                        android:id="@+id/iv"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/icon_size_add_image"
+                        android:id="@+id/iconAddImage"
                         android:layout_width="@dimen/_60sdp"
                         android:layout_height="@dimen/_60sdp"
                         android:layout_gravity="center"
@@ -64,7 +63,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/time_size_layout"
+                android:id="@+id/layoutTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_16sdp"
@@ -123,7 +122,7 @@
                 android:paddingHorizontal="@dimen/_16sdp">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/ac_tv_size_brand_layout"
+                    android:id="@+id/layoutBrand"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -136,7 +135,7 @@
                     app:shapeAppearance="@style/myEditTextCorner">
 
                     <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/ac_tv_size_brand"
+                        android:id="@+id/etBrand"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_34sdp"
                         android:imeOptions="actionNext"
@@ -151,7 +150,7 @@
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/et_size_name_layout"
+                        android:id="@+id/layoutName"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -164,7 +163,7 @@
                         app:shapeAppearance="@style/myEditTextCorner">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_size_name"
+                            android:id="@+id/etName"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_34sdp"
                             android:imeOptions="actionNext"
@@ -184,7 +183,7 @@
                         app:shapeAppearance="@style/myEditTextCorner">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_size_size"
+                            android:id="@+id/etSize"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_34sdp"
                             android:imeOptions="actionNext"
@@ -195,7 +194,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <FrameLayout
-                    android:id="@+id/detail_container_size"
+                    android:id="@+id/container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -214,7 +213,7 @@
                         app:shapeAppearance="@style/myEditTextCorner">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_size_link"
+                            android:id="@+id/etLink"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_34sdp"
                             android:autoLink="web"
@@ -227,7 +226,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_size_go"
+                        android:id="@+id/btnGo"
                         style="@style/Widget.MaterialComponents.Button"
                         android:layout_width="@dimen/_44sdp"
                         android:layout_height="wrap_content"
@@ -249,7 +248,7 @@
                     app:shapeAppearance="@style/myEditTextCorner">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_size_memo"
+                        android:id="@+id/etMemo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionDone"
