--- a/app/src/main/res/layout/item_recent_search.xml
+++ b/app/src/main/res/layout/item_recent_search.xml
@@ -53,7 +53,7 @@
                 tools:text="02월 13일" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/icon_item_recent_search_delete"
+                android:id="@+id/iconDelete"
                 setCloseIcon="@{recentSearch.word}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
