--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -21,13 +21,13 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/icon_item_tree_category_folder_layout"
+                android:id="@+id/layoutFolderIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="@dimen/_8sdp">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/icon_item_tree_category_arrow"
+                    android:id="@+id/iconArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
@@ -35,7 +35,7 @@
                     app:srcCompat="@drawable/icon_triangle_right" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/icon_item_tree_category_folder"
+                    android:id="@+id/iconFolder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.8"
@@ -43,7 +43,7 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_item_tree_category_category"
+                android:id="@+id/tvCategoryName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_8sdp"
@@ -56,7 +56,7 @@
                 tools:text="Short Sleeve" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_item_tree_category_current_position"
+                android:id="@+id/tvCurrentPosition"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:alpha="0.5"
@@ -67,7 +67,7 @@
                 android:visibility="gone" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_item_tree_category_contents_size"
+                android:id="@+id/tvContentsSize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -78,7 +78,7 @@
                 tools:text="20" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/icon_item_tree_category_add"
+                android:id="@+id/iconAdd"
                 setAddIcon2="@{category.categoryName}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
